# agamotto

./: README.md  main.py  plotting.py  pyproject.toml  readme.md  simulation.py
config/: agamotto.xml  viewSettings.xml
src/: analysis.py  main.py  plotting.py  simulation.py
