[tool.poetry]
name = "agamotto"
version = "0.1.0"
description = "SUMO middleware to simulate traffic variations after a road closure"
authors = ["Leonardo Baraldi <leonardo.baraldi@studio.unibo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
traci = "^1.20.0"
matplotlib = "3.9.2"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
