[tool.poetry]
name = "agamotto"
version = "0.1.0"
description = "SUMO middleware to simulate traffic variations after a road closure"
authors = ["Leonardo Baraldi <leonardo.baraldi@studio.unibo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
traci = "^1.20.0"
matplotlib = "3.9.2"
typer = "^0.12.3"
pandas = "^2.2.2"
contextily = "^1.6.1"
geopandas = "^1.0.1"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
